# Lea-Auto-Installer

./: LICENSE  README.md
source/src-tauri/: Cargo.toml  tauri.conf.json
source/src-tauri/src/: main.rs
source/ui/: index.html  script.js  styles.css
